<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F7FF"
    android:orientation="vertical"
    tools:context=".fragments.RecommendationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneuecapsbold"
                android:textColor="#73C2CC"
                android:textSize="17sp"
                android:text="@string/recommendation_headr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneueroman"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/recommendation_list"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneueroman"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="@string/recommendation_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneueroman"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="@string/recommendation_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneueroman"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="@string/recommendation_3"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneueroman"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="@string/recommendation_4"/>


        </LinearLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:background="@drawable/threedhand" />

    </LinearLayout>



</FrameLayout>